# $Id$

Griffith ChangeLog
------------------
(c) 2005 Vasco Nunes

2005-10-26 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a winsetup.py file to be used by py2exe

2005-10-25 Piotr Ozarowski <ozarow@gmail.com>
	* Correct loans history is now displayed if movie belongs to
	collection

2005-10-24 Piotr Ozarowski <ozarow@gmail.com>
	* Loans are finally working correctly
	* Crush when no media is selected in add movie function - fixed

2005-10-20 Piotr Ozarowski <ozarow@gmail.com>
	* WP movie plugin updated
	* Onet movie plugin updated

2005-10-16  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug with posters thumbnail generation

2005-10-15  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added preferences defaults to media, layers, condition, color and region

2005-10-14  Piotr Ozarowski <ozarow@gmail.com>
	* [Bug #5344] fixed wrong encoding in IMDb movie plugin (thanks to dieterv)

2005-10-13  Piotr Ozarowski <ozarow@gmail.com>
	* Updated WP movie plugin (webpage was changed)
	* Debian menu icon was in wrong format
	* Removing poster images when deleting movie feature added

2005-10-10  Piotr Ozarowski <ozarow@gmail.com>
	* Fixed crash when poster file is not present

2005-10-09  Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5306] Last toolbar button not working as expected
	* Added a 'by collection' quick filter

2005-10-05  Piotr Ozarowski <ozarow@gmail.com>
	* Polish translation updated

2005-10-05  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Poster viewer events changed to only show full poster when entering/leaving zoom button
	* Delete/Zoom poster buttons are now sensitive to poster existence
	* Portuguese translation updated

2005-10-04  Piotr Ozarowski <ozarow@gmail.com>
	* Griffith now asks if you want to loan whole collection

2005-10-01  Vasco Nunes <vasco.m.nunes@gmail.com>
	* Moved all movie plugins logos to a new optional package (griffith_extra_artwork module on cvs)
	* Added some tooltips to preferences widgets