@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 # -*- coding: ISO-8859-1 -*-
 
-__revision__ = '$Id: griffith,v 1.104 2005/10/04 23:53:11 iznogoud Exp $'
+__revision__ = '$Id$'
 
 # Copyright (c) 2005 Vasco Nunes
 # This program is free software; you can redistribute it and/or modify
@@ -231,6 +231,20 @@ class Griffith:
 	def e_remove_collection(self, *args):
 		if self.db.remove_collection(name=self.e_collection_combo.get_active_text()):
 			gutils.info(self, msg=_("Collection successfully deleted"))
+			edit.fill_collections_combo(self)
+
+	def e_rename_volume(self, *args):
+		id = self.e_volume_id.get_text()
+		new_name = self.e_volume_combo.get_active_text()
+		if update.update_volume(self, id, name=new_name):
+			gutils.info(self, msg=_("Volume successfully renamed"))
+			edit.fill_volumes_combo(self)
+
+	def e_rename_collection(self, *args):
+		id = self.e_collection_id.get_text()
+		new_name = self.e_collection_combo.get_active_text()
+		if update.update_collection(self, id, name=new_name):
+			gutils.info(self, msg=_("Collection successfully renamed"))
 			edit.fill_collections_combo(self)
 
 	def e_show_volume(self, *args):
