@@ -82,6 +82,8 @@ def define_widgets(self, gladefile):
 	# volumes/collections tab
 	self.e_volume_combo = gladefile.get_widget('e_volume_combo')
 	self.e_collection_combo = gladefile.get_widget('e_collection_combo')
+	self.e_volume_id = gladefile.get_widget('e_volume_id')
+	self.e_collection_id = gladefile.get_widget('e_collection_id')
 	self.show_volume_entries_button = gladefile.get_widget('show_volume_entries_button')
 	self.show_collection_entries_button = gladefile.get_widget('show_collection_entries_button')
 	# get from web
@@ -230,89 +232,91 @@ def define_widgets(self, gladefile):
 	# define handlers for general events
 		
 	dic = {
-		"gtk_main_quit" : self.destroy,
-		"on_about1_activate" : self.about_dialog,
-		"on_quit1_activate" : self.destroy,
-		"on_toolbar_quit_clicked" : self.destroy,
-		"on_toolbar_add_clicked" : self.add_movie,
-		"on_cancel_add_movie_clicked" : self.hide_add_movie,
-		"on_add1_activate" : self.add_movie,
-		"on_add_movie_clicked" : self.add_movie_db,
-		"on_add_movie_close_clicked" : self.add_movie_close_db,
-		"on_delete_movie_clicked" : self.delete_movie,
-		"on_delete1_movie_activate" : self.delete_movie,
-		"on_ok_delete_clicked" : self.delete_movie_from_db,
-		"on_main_treeview_row_activated" : self.treeview_clicked,
-		"on_row_activated" : self.treeview_clicked,
-		"on_get_from_web_clicked" : self.get_from_web,
-		"on_results_cancel_clicked" : self.hide_results,
-		"on_results_select_clicked" : self.populate_dialog_with_results,
-		"on_update_button_clicked" : self.update_movie,
-		"on_preferences1_activate" : self.show_preferences,
-		"on_cancel_preferences_clicked" : self.hide_preferences,
-		"on_save_preferences_clicked" : self.save_preferences,
-		"on_backup_activate" : self.backup,
-		"on_restore_activate" : self.restore,
-		"on_cover_simple_activate" : self.print_cover_simple_show,
-		"on_cancel_print_cover_simple_clicked" : self.print_cover_simple_hide,
-		"on_b_print_cover_simple_clicked" : self.print_cover_simple_process,
-		"on_add_clear_clicked" : self.clear_add_dialog,
-		"on_people_activate" : self.show_people_window,
-		"on_cancel_people_clicked" : self.hide_people_window,
-		"on_filter_txt_changed" : self.filter_txt,
-		"on_filter_criteria_changed" : self.filter_txt,
-		"on_clear_filter_clicked" : self.clear_filter,
-		"on_people_add_clicked" : self.add_person,
-		"on_add_person_cancel_clicked" : self.add_person_cancel,
-		"on_add_person_db_clicked" : self.add_person_db,
-		"on_people_delete_clicked" : self.delete_person,
-		"on_people_edit_clicked" : self.edit_person,
-		"on_edit_person_cancel_clicked" : self.edit_person_cancel,
-		"on_update_person_clicked" : self.update_person,
-		"on_clone_activate" : self.clone_movie,
-		"on_loan_button_clicked" : self.loan_movie,
-		"on_cancel_loan_clicked" : self.cancel_loan,
-		"on_loan_ok_clicked" : self.commit_loan,
-		"on_return_button_clicked" : self.return_loan,
-		"on_list_loaned_movies_activate" : self.filter_loaned,
-		"on_cover_choose_image_activate" : self.print_cover_image,
-		"on_cancel_print_cover_image_clicked" : self.print_cover_image_hide,
-		"on_b_print_cover_image_clicked" : self.print_cover_image_process,
-		"on_go_site_clicked" : self.go_oficial_site,
-		"on_combo_source_changed" : self.source_changed,
+		"gtk_main_quit"                         : self.destroy,
+		"on_about1_activate"                    : self.about_dialog,
+		"on_quit1_activate"                     : self.destroy,
+		"on_toolbar_quit_clicked"               : self.destroy,
+		"on_toolbar_add_clicked"                : self.add_movie,
+		"on_cancel_add_movie_clicked"           : self.hide_add_movie,
+		"on_add1_activate"                      : self.add_movie,
+		"on_add_movie_clicked"                  : self.add_movie_db,
+		"on_add_movie_close_clicked"            : self.add_movie_close_db,
+		"on_delete_movie_clicked"               : self.delete_movie,
+		"on_delete1_movie_activate"             : self.delete_movie,
+		"on_ok_delete_clicked"                  : self.delete_movie_from_db,
+		"on_main_treeview_row_activated"        : self.treeview_clicked,
+		"on_row_activated"                      : self.treeview_clicked,
+		"on_get_from_web_clicked"               : self.get_from_web,
+		"on_results_cancel_clicked"             : self.hide_results,
+		"on_results_select_clicked"             : self.populate_dialog_with_results,
+		"on_update_button_clicked"              : self.update_movie,
+		"on_preferences1_activate"              : self.show_preferences,
+		"on_cancel_preferences_clicked"         : self.hide_preferences,
+		"on_save_preferences_clicked"           : self.save_preferences,
+		"on_backup_activate"                    : self.backup,
+		"on_restore_activate"                   : self.restore,
+		"on_cover_simple_activate"              : self.print_cover_simple_show,
+		"on_cancel_print_cover_simple_clicked"  : self.print_cover_simple_hide,
+		"on_b_print_cover_simple_clicked"       : self.print_cover_simple_process,
+		"on_add_clear_clicked"                  : self.clear_add_dialog,
+		"on_people_activate"                    : self.show_people_window,
+		"on_cancel_people_clicked"              : self.hide_people_window,
+		"on_filter_txt_changed"                 : self.filter_txt,
+		"on_filter_criteria_changed"            : self.filter_txt,
+		"on_clear_filter_clicked"               : self.clear_filter,
+		"on_people_add_clicked"                 : self.add_person,
+		"on_add_person_cancel_clicked"          : self.add_person_cancel,
+		"on_add_person_db_clicked"              : self.add_person_db,
+		"on_people_delete_clicked"              : self.delete_person,
+		"on_people_edit_clicked"                : self.edit_person,
+		"on_edit_person_cancel_clicked"         : self.edit_person_cancel,
+		"on_update_person_clicked"              : self.update_person,
+		"on_clone_activate"                     : self.clone_movie,
+		"on_loan_button_clicked"                : self.loan_movie,
+		"on_cancel_loan_clicked"                : self.cancel_loan,
+		"on_loan_ok_clicked"                    : self.commit_loan,
+		"on_return_button_clicked"              : self.return_loan,
+		"on_list_loaned_movies_activate"        : self.filter_loaned,
+		"on_cover_choose_image_activate"        : self.print_cover_image,
+		"on_cancel_print_cover_image_clicked"   : self.print_cover_image_hide,
+		"on_b_print_cover_image_clicked"        : self.print_cover_image_process,
+		"on_go_site_clicked"                    : self.go_oficial_site,
+		"on_combo_source_changed"               : self.source_changed,
 		# poster
-		"on_e_picture_clicked" : self.change_poster,
-		"on_open_poster_clicked" : self.change_poster,
-		"on_delete_poster_clicked" : self.del_poster,
-		#"on_zoom_poster_clicked" : self.z_poster,
-		"on_fetch_poster_clicked" : self.get_poster,
-		"on_go_imdb_clicked" : self.go_imdb_site,
-		"on_go_trailer_clicked" : self.go_trailer_site,
-		"on_new_bt_clicked" : self.new_dbb,
-		"on_new_activate" : self.new_dbb,
-		"on_view_toolbar_activate" : self.toggle_toolbar,
-		"on_seen_movies_activate" : self.filter_not_seen,
-		"on_all_movies_activate" : self.filter_all,
-		"on_rating_scale_value_changed" : self.scale_rating_change,
-		"on_rating_scale_add_value_changed" : self.scale_rating_change_add,
-		"on_e_seen_released" : self.toggle_seen,
-		"on_sugest_activate" : self.sugest_movie,
-		"on_email_reminder_clicked" : self.email_reminder,
-		"on_go_first_clicked" : self.go_first,
-		"on_go_last_clicked" : self.go_last,
-		"on_popup_delete_activate" : self.delete_movie,
-		"on_popup_clone_activate" : self.clone_movie,
-		"on_popup_simple_activate" : self.print_cover_simple_show,
-		"on_popup_choose_image_activate" : self.print_cover_image,
-		"on_popup_loan_activate" : self.loan_movie,
-		"on_popup_return_activate" : self.return_loan,
-		"on_popup_email_activate" : self.email_reminder,
-		"on_e_add_volume_button_clicked": self.e_add_volume,
-		"on_e_add_collection_button_clicked": self.e_add_collection,
-		"on_e_remove_volume_button_clicked": self.e_remove_volume,
-		"on_e_remove_collection_button_clicked": self.e_remove_collection,
-		"on_e_show_volume_button_clicked": self.e_show_volume,
-		"on_e_show_collection_button_clicked": self.e_show_collection,
-		"on_f_col_changed": self.filter_collection
+		"on_e_picture_clicked"                  : self.change_poster,
+		"on_open_poster_clicked"                : self.change_poster,
+		"on_delete_poster_clicked"              : self.del_poster,
+		#"on_zoom_poster_clicked"               : self.z_poster,
+		"on_fetch_poster_clicked"               : self.get_poster,
+		"on_go_imdb_clicked"                    : self.go_imdb_site,
+		"on_go_trailer_clicked"                 : self.go_trailer_site,
+		"on_new_bt_clicked"                     : self.new_dbb,
+		"on_new_activate"                       : self.new_dbb,
+		"on_view_toolbar_activate"              : self.toggle_toolbar,
+		"on_seen_movies_activate"               : self.filter_not_seen,
+		"on_all_movies_activate"                : self.filter_all,
+		"on_rating_scale_value_changed"         : self.scale_rating_change,
+		"on_rating_scale_add_value_changed"     : self.scale_rating_change_add,
+		"on_e_seen_released"                    : self.toggle_seen,
+		"on_sugest_activate"                    : self.sugest_movie,
+		"on_email_reminder_clicked"             : self.email_reminder,
+		"on_go_first_clicked"                   : self.go_first,
+		"on_go_last_clicked"                    : self.go_last,
+		"on_popup_delete_activate"              : self.delete_movie,
+		"on_popup_clone_activate"               : self.clone_movie,
+		"on_popup_simple_activate"              : self.print_cover_simple_show,
+		"on_popup_choose_image_activate"        : self.print_cover_image,
+		"on_popup_loan_activate"                : self.loan_movie,
+		"on_popup_return_activate"              : self.return_loan,
+		"on_popup_email_activate"               : self.email_reminder,
+		"on_e_add_volume_button_clicked"        : self.e_add_volume,
+		"on_e_add_collection_button_clicked"    : self.e_add_collection,
+		"on_e_remove_volume_button_clicked"     : self.e_remove_volume,
+		"on_e_remove_collection_button_clicked" : self.e_remove_collection,
+		"on_e_rename_volume_button_clicked"     : self.e_rename_volume,
+		"on_e_rename_collection_button_clicked" : self.e_rename_collection,
+		"on_e_show_volume_button_clicked"       : self.e_show_volume,
+		"on_e_show_collection_button_clicked"   : self.e_show_collection,
+		"on_f_col_changed"                      : self.filter_collection
 	}
 	gladefile.signal_autoconnect(dic)
