@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005 Vasco Nunes
 
+2005-10-27 Piotr Ozarowski <ozarow@gmail.com>
+	* Renaming of volumes and collection is now possible
+
 2005-10-26 Vasco Nunes <vasco.m.nunes@gmail.com>
 	* Added a winsetup.py file to be used by py2exe
 
